# itmo_static_code_analyzer

./: README.md  main.py  pyproject.toml
.github/workflows/: analyzer.yaml  pylint.yaml  pytest_coverage.yaml
src/: analyzer.py  io_utils.py
tests/: analyzer_test.py  test1.py  test2.py
